[package]
name = "mro-rust"
version = "0.1.0"
authors = ["Marco Rolappe <m_rolappe@gmx.net>"]

[lib]
name = "mal"
path = "src/mal/lib.rs"

# [[bin]]
# name = "step0"
# path = "src/bin/step0_repl.rs"

# [[bin]]
# name = "step1_read_print"
# path = "src/bin/step1_read_print.rs"

# [[bin]]
# name = "step2_eval"
# path = "src/bin/step2_eval.rs"

# [[bin]]
# name = "step3_env"
# path = "src/bin/step3_env.rs"

# [[bin]]
# name = "step4_if_fn_do"
# path = "src/bin/step4_if_fn_do.rs"

# [[bin]]
# name = "step5_tco"
# path = "src/bin/step5_tco.rs"

# [[bin]]
# name = "step6_file"
# path = "src/bin/step6_file.rs"

# [[bin]]
# name = "step7_quote"
# path = "src/bin/step7_quote.rs"

# [[bin]]
# name = "step8_macros"
# path = "src/bin/step8_macros.rs"

[[bin]]
name = "step9_try"
path = "src/bin/step9_try.rs"

[dependencies]
regex = "0.1.80"
lazy_static = "0.2.2"
itertools = "0.5.4"
log = "0.3"
env_logger = "0.3"
